@@ -24,3 +24,10 @@ $(tgdb_srcdir)/annotate-two-src/tgdb_init.c \
 $(tgdb_srcdir)/annotate-two-src/buffer.c \
 $(tgdb_srcdir)/gdbmi-src/gdbmi_tgdb.c \
 $(tgdb_srcdir)/gdbmi-src/gdbmi_parse.c
+
+EXTRA_PROGRAMS=driver
+bin_PROGRAMS = @BUILD_DRIVER@
+driver_LDFLAGS = -L.
+driver_LDADD = -ltgdb
+driver_SOURCES = driver.c
+driver_DEPENDENCIES = -ltgdb
